# duckduckgo-mcp-server-py

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DOCKER_USAGE.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  README_EN.md  docker-compose.yml  final_test.py  pyproject.toml  test_server.py
config/nginx/: nginx.conf
docs/: api_en.md  api_zh.md  deployment_en.md  deployment_zh.md  development_en.md  development_zh.md
examples/: claude_desktop_config.json  docker_usage.md  http_client.py  sse_client.py
scripts/: quick_start.sh
scripts/docker/: docker-entrypoint.sh
src/duckduckgo_mcp_server/: __init__.py  config.py  models.py  rate_limiter.py  search_client.py  server.py  transports.py
tests/docker/: simple_docker_test.py  test_docker_integration.py
tests/integration/: debug_test.py  test_integration.py  validate_integration.py
tests/unit/: README.md  __init__.py  conftest.py  test_config.py  test_models.py  test_rate_limiter.py  test_search_client.py  test_search_client_simplified.py  test_server.py  test_transports.py
