[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckduckgo-mcp-server"
version = "0.1.2"
description = "A Python-based MCP server that provides DuckDuckGo search functionality with support for stdio, HTTP, and SSE transports"
authors = [
    {name = "zhsama", email = "torvalds@linux.do"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.13.0",
    # duck-duck-scrape dependency - choose one of the options below:
    # Option 1: Install from local path (for development)
    # Uncomment the line below and comment out the GitHub option
    # "duck-duck-scrape @ file:../duck-duck-scrape-py",

    # Option 2: Install from GitHub (for production) - Currently ACTIVE
    "duck-duck-scrape @ git+https://github.com/southern-dust/duck-duck-scrape-py.git",

    # Option 3: Install from PyPI (fallback - currently commented out)
    # "duck-duck-scrape>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "flake8>=6.0.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
duckduckgo-mcp-server = "duckduckgo_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/zhsama/duckduckgo-mcp-server"
Repository = "https://github.com/zhsama/duckduckgo-mcp-server"
Issues = "https://github.com/zhsama/duckduckgo-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]